Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.02 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.02
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.02.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for Perl extension Lingua::JA::TFWebIDF
 
+0.02    Thu, 07 Jun 2012 02:21:07 +0900
+        - fixed documentation
+
 0.01    Wed, 06 Jun 2012 23:20:53 +0900
         - original version
