Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.03 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.03
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.03.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -46,6 +46,15 @@ SYNOPSIS
 DESCRIPTION
     Lingua::JA::TFWebIDF calculates TF*WebIDF scores.
 
+    Compared with Lingua::JA::TFIDF, this module has the following
+    advantages.
+
+    supports Tokyo Cabinet, Bing API, idf_type option, expires_in option and
+    so on.
+    tfidf function accepts \%tf. (This eases the use of other morphological
+    analyzers.)
+
+METHODS
   new(%config)
     See Lingua::JA::WebIDF.
 
