--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Lingua::JA::TFWebIDF
 
+0.03    Fri, 08 Jun 2012 19:19:21 +0900
+        - improved documentation
+
 0.02    Thu, 07 Jun 2012 02:21:07 +0900
         - fixed documentation
 
