--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Lingua::JA::TFWebIDF
 
+0.04    Fri, 08 Jun 2012 19:36:22 +0900
+        - improved documentation
+
 0.03    Fri, 08 Jun 2012 19:19:21 +0900
         - improved documentation
 
