Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.31 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.31
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.31.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -98,15 +98,17 @@ METHODS
         with full width spaces.
 
     fetch_df => 0 || 1
-        1: fetches the DF score of a word which exists in the dictionary of
+        1: Fetches the DF score of a word which exists in the dictionary of
         MeCab if DF score of its word is not fetched yet.
 
-        0: average DF score is used.
+        0: The average DF score is used.
 
     fetch_unk_word_df => 0 || 1
         'unk word' is a word which not exists in the dictionary of MeCab.
 
-        0: average DF score is used.
+        1: If fetch_df is 1, fetches DF score of unk word.
+
+        0: The average DF score is used.
 
     idf_type, api, appid, driver, df_file, expires_in, documents, Furl_HTTP
         See Lingua::JA::WebIDF.
