Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.32 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.32
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.32.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Lingua::JA::TFWebIDF
 
+0.32    Sat, 28 Jul 2012 16:24:37 +0900
+        - changed Lingua::JA::WebIDF dependency from 0.30 to 0.31
+        - fixed documentation
+
+
 0.31    Wed, 25 Jul 2012 18:51:12 +0900
         - changed Lingua::JA::WebIDF dependency from 0.21 to 0.30
 
