Import of PAWAPAWA/Lingua-JA-TFWebIDF-0.35 from CPAN.
gitpan-cpan-distribution: Lingua-JA-TFWebIDF
gitpan-cpan-version:      0.35
gitpan-cpan-path:         PAWAPAWA/Lingua-JA-TFWebIDF-0.35.tar.gz
gitpan-cpan-author:       PAWAPAWA
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Lingua::JA::TFWebIDF
 
+0.35    Sun, 29 Jul 2012 19:05:36 +0900
+        - fixed documentation
+
 0.34    Sun, 29 Jul 2012 14:53:15 +0900
         - fixed unk tagging
 
