--- a/README
+++ b/README
@@ -21,7 +21,7 @@ SYNOPSIS
           df_max            => 500_0000,
           ng_word           => [qw/編集 本人 自身 自分 たち さん/],
           fetch_unk_word_df => 0,
-          concatenation_max => 100,
+          concat_max        => 100,
       );
 
       my %tf = (
@@ -69,11 +69,12 @@ METHODS
       ng_word             []
       term_length_min     2
       term_length_max     30
-      concatenation_max   30
+      concat_max          30
       tf_min              1
       df_min              0
       df_max              250_0000_0000
       fetch_unk_word_df   0
+      db_auto             1
 
       idf_type            1
       api                 'Yahoo'
@@ -88,7 +89,7 @@ METHODS
     pos(1|2|3)_filter => \@pos
         The filters of '品詞細分類'.
 
-    concatenation_max => $num
+    concat_max => $num
         The maximum value of the number of term concatenations.
 
         If 2 is specified, 2 consecutive nouns are concatenated. I recommend
@@ -109,6 +110,10 @@ METHODS
         1: If fetch_df is 1, fetches DF score of unk word.
 
         0: The average DF score is used.
+
+    db_auto => 0 || 1
+        If 1 is specified, (open|close)s the DF(Document Frequency) database
+        automatically.
 
     idf_type, api, appid, driver, df_file, expires_in, documents, Furl_HTTP
         See Lingua::JA::WebIDF.
